# swagger.json
@@ -5,28 +5,42 @@
     "description": "API documentation for the project",
     "version": "1.0.0"
   },
-  "host": "cse341-final-project-volunteer-mgmt-9qgz.onrender.com",
+  "host": "https://cse341-final-project-volunteer-mgmt-9qgz.onrender.com",
   "basePath": "/",
   "schemes": [
     "https"
   ],
+  "securityDefinitions": {
+    "GitHubAuth": {
+      "type": "oauth2",
+      "flow": "accessCode",
+      "authorizationUrl": "https://github.com/login/oauth/authorize",
+      "tokenUrl": "https://github.com/login/oauth/access_token",
+      "scopes": {
+        "user:email": "Grants read access to a user's email addresses."
+      }
+    }
+  },
+  "security": [
+    
+  ],
   "paths": {
     "/login": {
       "get": {
-        "description": "",
+        "description": "Start GitHub login",
         "responses": {
           "default": {
-            "description": ""
+            "description": "Redirects to GitHub OAuth"
           }
         }
       }
     },
     "/logout": {
       "get": {
-        "description": "",
+        "description": "Log the user out",
         "responses": {
           "default": {
-            "description": ""
+            "description": "Logs out and redirects"
           }
         }
       }
@@ -53,10 +67,11 @@
     },
     "/api/users/": {
       "get": {
+        "security": [{ "GitHubAuth": [] }],
         "tags": [
           "USERS"
         ],
-        "description": "",
+        "description": "Get all users",
         "responses": {
           "200": {
             "description": "OK"
@@ -127,6 +142,7 @@
     },
     "/api/users/{id}": {
       "get": {
+        "security": [{ "GitHubAuth": [] }],
         "tags": [
           "USERS"
         ],
@@ -155,6 +171,7 @@
         }
       },
       "put": {
+        "security": [{ "GitHubAuth": [] }],
         "tags": [
           "USERS"
         ],
@@ -223,6 +240,7 @@
         }
       },
       "delete": {
+        "security": [{ "GitHubAuth": [] }],
         "tags": [
           "USERS"
         ],
@@ -267,6 +285,7 @@
         }
       },
       "post": {
+        "security": [{ "GitHubAuth": [] }],
         "tags": [
           "EVENTS"
         ],
@@ -358,6 +377,7 @@
         }
       },
       "put": {
+        "security": [{ "GitHubAuth": [] }],
         "tags": [
           "EVENTS"
         ],
@@ -432,6 +452,7 @@
         }
       },
       "delete": {
+        "security": [{ "GitHubAuth": [] }],
         "tags": [
           "EVENTS"
         ],
@@ -476,6 +497,7 @@
         }
       },
       "post": {
+        "security": [{ "GitHubAuth": [] }],
         "tags": [
           "VOLUNTEERS"
         ],
@@ -549,6 +571,7 @@
         }
       },
       "put": {
+        "security": [{ "GitHubAuth": [] }],
         "tags": [
           "VOLUNTEERS"
         ],
@@ -590,6 +613,7 @@
         }
       },
       "delete": {
+        "security": [{ "GitHubAuth": [] }],
         "tags": [
           "VOLUNTEERS"
         ],
@@ -634,6 +658,7 @@
         }
       },
       "post": {
+        "security": [{ "GitHubAuth": [] }],
         "tags": [
           "FEEDBACK"
         ],
@@ -711,6 +736,7 @@
         }
       },
       "put": {
+        "security": [{ "GitHubAuth": [] }],
         "tags": [
           "FEEDBACK"
         ],
@@ -758,6 +784,7 @@
         }
       },
       "delete": {
+        "security": [{ "GitHubAuth": [] }],
         "tags": [
           "FEEDBACK"
         ],
